# lrcb-rpa

./: CMakeLists.txt  INSTALL.txt  LICENSE.txt  README.txt  assessmentscore.cpp  assessmentscore.hpp  assessmentwindow.cpp  assessmentwindow.hpp  excel.cpp  excel.hpp  exit.xpm  loginwindow.cpp  loginwindow.hpp  lrcb-rpa-launcher.nsi.in  lrcb-rpa-setup.nsi.in  main.cpp  rca.qrc  settingswindow.cpp  settingswindow.hpp  util.cpp  util.hpp
WebcamControl/: WebcamControl.sln
WebcamControl/WebcamControl/: Program.cs  WebcamControl.csproj  packages.config
WebcamControl/WebcamControl/Properties/: AssemblyInfo.cs
